--- a/test/createIconBox/old/style/variablesFonts.css
+++ b/test/createIconBox/old/style/variablesFonts.css
@@ -26,7 +26,6 @@
   --color-accent-two:   #27B46E;
   --color-accent-three: #6363E0;
   --color-accent-four:  #CC4B4B;
-  --color-accent-current: var(--color-accent-one);
 }
 
 /* --- Fonts --- */
@@ -60,6 +59,6 @@
 
 body{
   position: relative;
-  width: 100%;
-  height:100%;
+  width: 100vw;
+  height:100vh;
 }
