--- a/style/styleProject.css
+++ b/style/styleProject.css
@@ -122,6 +122,7 @@ nav li a {
   font-weight: bold;
   font-size: 4em;
   white-space: nowrap;
+  color: var(--color-black);
   
   margin-bottom: 0.1em;
 }
@@ -181,6 +182,11 @@ nav li a {
   transform: translateX(-0.7em);
   color: var(--color-white);
 }
+.projects .project-content h3 a{
+  color: var(--color-white);
+  text-decoration-thickness: 2px;
+}
+
 
 .projects .project-content p{
   font-family: 'Corbel', sans-serif;
@@ -205,12 +211,10 @@ nav li a {
   left: 0;
   
   width: 85%;
-  
   height: 1.5vh;
   margin-top: 2.7vh;
   
-  /*cursor: text;*/
-  cursor: e-resize;
+  /*cursor: none;*/
   background-color: rgba(255,255,255,0.25);
   
   border: none;
@@ -240,14 +244,14 @@ nav li a {
 
 
 .projects .project-content .p-selection.selectedProject .cursor-current{
-  left:   var(--cursor-current);
-  border-left: 4px solid var(--color-white);
+  width:   var(--cursor-current);
+  border-right: 4px solid var(--color-white);
   
 }
 
 .projects .project-content .p-selection:hover .cursor-selection{
   transform: translateY(-100%);
   
-  left:   var(--cursor-selection);
-  border-left: 4px solid rgba(255,255,255,0.6);
+  width:   var(--cursor-selection);
+  border-right: 4px solid rgba(255,255,255,0.6);
 }
