--- a/style/variablesFonts.css
+++ b/style/variablesFonts.css
@@ -19,7 +19,8 @@
   --color-accent-1: #27B46E;
   --color-accent-2: #6363E0;
   --color-accent-3: #CC4B4B;
-  --color-accent-current: var(--color-accent-0);
+  --color-accent-current:     var(--color-accent-0);
+	--color-accent-current-rgb: 0,0,0;
   
   /* Project Selector Control */
   --cursor-current:   20%;
@@ -64,4 +65,5 @@ body{
   width: 100%;
   height:100%;
   box-sizing: border-box;
+	background-color: var(--color-white);
 }
